--- a/index.ipynb
+++ b/index.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Geometric and Negative Binomial distribution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction"
+    "# The Geometric and Negative Binomial Distributions - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll practice your knowledge on the geometric and negative binomial distributions!\n",
+    "\n",
+    "## Objectives\n",
+    "You will be able to:\n",
+    "- Understand and explain the Negative Binomial Distribution and its uses\n",
+    "- Understand and explain Geometric Distributions and their uses\n",
+    "\n",
+    "## Quick Recap"
    ]
   },
   {
@@ -23,8 +27,7 @@
     "In fact, a binomial distribution describes a repeated bernoulli experiment. A bernoulli experiment can be seen as one trial where there is a known success rate $p$. Examples:\n",
     "- Rolling a dice once where success is defined as throwing a 5 or higher, the probability of success is 1/3.\n",
     "- Shooting at a basketball rink where the success probability is 70%.\n",
-    "- etc.\n",
-    "\n"
+    "- etc."
    ]
   },
   {
@@ -97,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Geometric Function\n",
+    "## 2. Geometric Function\n",
     "Now write a probability distribution function for a random variable y. The function should take in the probability, p of the success of an individual Bernoulli experiment. (In our previous coin flipping example, p=0.5.)"
    ]
   },
@@ -119,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Product Failures\n",
+    "## 3. Product Failures\n",
     "Assume that the probability of a product working is 95%. Before shipping the products, the manufacturer is checking each product for defects. What is the probability that the 10th product checked is the first defective one found?"
    ]
   },
@@ -137,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Product Failures take 2\n",
+    "## 4. Product Failures take 2\n",
     "In many cases, a manufacturer might only test a sample of the products for defaults. Assuming 95% of the products do indeed work, what is the probability that in testing 20 units, that none will be defective?"
    ]
   },
@@ -155,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Consumer Profiling\n",
+    "## 5. Consumer Profiling\n",
     "A previous sample showed that 70% of U.S. shoppers prefer to buy groceries in store as compared to online.  \n",
     "Calculate the probability that the 6th person interviewed is the first to prefer to buy groceries online."
    ]
@@ -174,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Consumer Profiling 2\n",
+    "## 6. Consumer Profiling 2\n",
     "What is the probability that at least 6 people have to be interviewed before finding someone who prefers to buy groceries online? (Assuming the statistic is true.)"
    ]
   },
@@ -186,6 +189,15 @@
    "source": [
     "#Code and answer here\n",
     "prob = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "Awesome, you've now learned about many use cases for the geometric and negative binomial distribution!"
    ]
   }
  ],
@@ -205,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
