--- a/index.ipynb
+++ b/index.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Geometric and Negative Binomial distribution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction"
+    "# The Geometric and Negative Binomial Distributions - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll practice your knowledge on the geometric and negative binomial distributions!\n",
+    "\n",
+    "## Objectives\n",
+    "You will be able to:\n",
+    "- Understand and explain the Negative Binomial Distribution and its uses\n",
+    "- Understand and explain Geometric Distributions and their uses\n",
+    "\n",
+    "## Quick Recap"
    ]
   },
   {
@@ -282,12 +286,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Fun rounding errors noted on 4/6 conceptions ;) geeks unite! -Matt"
+    "## Summary\n",
+    "\n",
+    "Awesome, you've now learned about many use cases for the geometric and negative binomial distribution!"
    ]
   }
  ],
@@ -307,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
