--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Your answer here"
+    "50%"
    ]
   },
   {
@@ -73,11 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "# 25%"
    ]
   },
   {
@@ -89,11 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "# 3rd - 12.5%\n",
+    "# 5th - 3.125%"
    ]
   },
   {
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +117,7 @@
     "    \"\"\"y is a discrete random variable. It should be an integer that is greater then zero.\n",
     "    p is the probability of a success for the Bernoulli experiment to be conducted.\n",
     "    This function should return the probability that the first successful Bernoulli experiment will occur on the yth trial.\"\"\"\n",
-    "    prob = #The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
+    "    prob = ((1-p)**(y-1))*(p)#The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
     "    return prob"
    ]
   },
@@ -128,12 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03151247048623045"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(10,.05)\n",
+    "prob"
    ]
   },
   {
@@ -146,12 +161,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3584859224085419"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ".95**20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35848592240854255"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = 1\n",
+    "for i in range(1,21):\n",
+    "    prob = prob - geometric_dist(i, .05)\n",
+    "prob"
    ]
   },
   {
@@ -165,12 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05042099999999998"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(6, .3)\n",
+    "prob"
    ]
   },
   {
@@ -183,12 +244,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16807000000000005"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = 1\n",
+    "for i in range(1,6):\n",
+    "    prob = prob - geometric_dist(i, .3)\n",
+    "prob"
    ]
   },
   {
@@ -217,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
